# ducking-profanity-filter

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: server.py
